force-app/main/default/objects/Lead__c/fields/Adhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Adhar_Number__c</fullName>
    <label>Adhar Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>