force-app/main/default/objects/Lead__c/fields/Counsellor__c.field-meta.xml
<CustomField>
    <fullName>Counsellor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counsellor</label>
    <referenceTo>Counsillor__c</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>