force-app/main/default/objects/Lead__c/fields/Drinking__c.field-meta.xml
<CustomField>
    <fullName>Drinking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drinking</label>
    <type>Checkbox</type>
</CustomField>