force-app/main/default/objects/Lead__c/fields/Hospital_Number__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Number__c</fullName>
    <label>Hospital Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>