force-app/main/default/objects/Lead__c/fields/Last_Admit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Admit_Date__c</fullName>
    <label>Last Visit Date</label>
    <type>Date</type>
</CustomField>