force-app/main/default/objects/Lead__c/fields/Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Value__c</fullName>
    <label>Lifetime Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>