force-app/main/default/objects/Lead__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Specialist Not available</fullName>
            </value>
            <value>
                <fullName>Went with others</fullName>
            </value>
            <value>
                <fullName>Postponed Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>