force-app/main/default/objects/Lead__c/fields/Origin_Lead__c.field-meta.xml
<CustomField>
    <fullName>Origin_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Converted Patients</relationshipLabel>
    <relationshipName>Converted_Patients</relationshipName>
    <type>Lookup</type>
</CustomField>