force-app/main/default/objects/Lead__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <label>Passport Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>