force-app/main/default/objects/Lead__c/fields/Patient_Category__c.field-meta.xml
<CustomField>
    <fullName>Patient_Category__c</fullName>
    <label>Patient Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Chronic</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>