force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Age__c</columns>
    <columns>Campaign__c</columns>
    <columns>Follow_up_Date__c</columns>
    <columns>Hospital_Number__c</columns>
    <columns>Gender__c</columns>
    <columns>Email__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>Passport_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>